# CppGTestTemplate

./: CMakeLists.txt  README.md
MyApp/: CMakeLists.txt  main.cpp
MyLibrary/: CMakeLists.txt
MyLibrary/include/: MyMath.h
MyLibrary/src/: MyMath.cpp
MyTest/: CMakeLists.txt
MyTest/include/: MyMathTestFixture.h
MyTest/src/: MyMathTestFixture.cpp  example.cpp
